--- a/book.html
+++ b/book.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>QuadSquad Pay</title>
+		<title>Book Cleaning</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -46,19 +46,18 @@
 			</div>
 
 		<!-- Main -->
-			<div id="main" class="wrapper style6">
+			<div id="main" class="wrapper style4">
 
 				<!-- Content -->
 				<div id="content" class="container">
 					<section>
 						<header class="major">
 							<center>
-								<h2>Payment is easy</h2>
-								<span class="byline">And affordable on any college budget</span>
+								<h2>Pick a time that works for you</h2>
+								<span class="byline">Go ahead and book a time for a QuadSquad member to come clean your dorm.</span>
+								/images/ig-badge-32.png" alt="Instagram" /></a>
 							</center>
 						</header>
-
-						<script id="setmore_script" type="text/javascript" src="https://my.setmore.com/js/iframe/setmore_iframe.js"></script><a id="Setmore_button_iframe" style="float:none" href="https://my.setmore.com/shortBookingPage/5533ab74-77c3-4683-9efb-63f2a0ae0606"><img border="none" src="https://my.setmore.com/images/bookappt/SetMore-book-button.png" alt="Book an appointment with QuadSquad using SetMore" /></a>
                     </section>
 				</div>
 			</div>
@@ -77,18 +76,17 @@
 					</section>
 				</div>
 
-				<!-- Footer -->
-					<div id="footer">
-						<section class="container">
-							<header class="major">
-								<h2>Connect with us</h2>
-							</header>
-							<ul class="icons">
-								<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
-								<li class="active"><a href="https://www.instagram.com/QuadSquadOSU" class="fa fa-instagram"><span>Instagram</span></a></li>
-							</ul>
-							<hr />
-						</section>
-					</div>
-				</body>
-			</html>
+		<!-- Footer -->
+			<div id="footer">
+				<section class="container">
+					<header class="major">
+						<h2>Connect with us</h2>
+					</header>
+					<ul class="icons">
+						<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
+					</ul>
+					<hr />
+				</section>
+			</div>
+		</body>
+	</html>
