--- a/faq.html
+++ b/faq.html
@@ -36,7 +36,7 @@
 									<li><a href="services.html">Services</a></li>
 									<li><a href="mystory.html">My Story</a></li>
 									<li><a href="faq.html">FAQ</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="https://quadsquadosu.wufoo.com/forms/z1a6zdxz1tk2x5k/">Contact</a></li>
 									<li><a href="pay.html">Pay</a></li>
 								</ul>
 							</nav>
@@ -54,9 +54,32 @@
 
 						<header class="major">
 							<center>
-							<h2>Frequently Asked Questions</h2><br>
-							<h4>We understand if you have a couple</h4>
-							<h4>Let us clear them up for you</h4>
+								<h2>Frequently Asked Questions</h2><br>
+								<h4>We understand if you have a couple</h4>
+								<br>
+								<ul>
+										<li><strong>1.	Who cleans the room?</strong></li>
+										<li>A fellow student from The Ohio State University who has gone through a thorough
+										background check and has been quality tested.</li>
+										<br>
+										<li><strong>2.   Do I have to be present?</strong></li>
+										The university recommends escorting the cleaning team into the dormitory for security
+										purposes. However, after entry to the room, you are free to come and go as you please
+										as your dorm is being cleaned.</li>
+										<br><br>
+										<li><strong>3.	 Do I have to provide any materials for cleaning?</strong></li>
+										<li>No, all necessary cleaning supplies will be provided by the cleaning team.</li>
+										<br>
+										<li><strong>4. 	 What’s included in each clean?</strong></li>
+										<li>For 30 minutes, the cleaning team is yours. Each team follows a detailed 12-point
+										checklist of required work, however, we encourage you to inform the team of any special
+										requests before any cleaning period.</li>
+										<br>
+										<li><strong>5. Can I make up a clean I miss? (vacation, tardiness, exam, etc.)</strong></li>
+										<li>Any scheduled clean can be made up if you contact us before 24 hours of your cleaning
+										appointment. Within 24 hours, however, requires a late cancellation fee which will be
+										added to your next clean’s bill.</li>
+								</ul>
 							</center>
 						</header>
 
@@ -72,25 +95,25 @@
 							<h2>The Squad</h2>
 						</header>
 							<div class="u3" id="JustinIntro">
-								<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
+								<a href="mystory.html" class="image"><img src="images/theCafs.jpg" alt="" width="235" height="230" class="mugshot"></a>
 								<h3>Justin Cafiero</h3>
 								<p>Founder of QuadSquad</p>
 							</div>
 					</section>
 				</div>
 
-		<!-- Footer -->
-			<div id="footer">
-				<section class="container">
-					<header class="major">
-						<h2><a href="contact.html">Clean easy</a></h2>
-					</header>
-					<ul class="icons">
-						<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
-						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					</ul>
-					<hr />
-				</section>
-			</div>
-		</body>
-	</html>
+				<!-- Footer -->
+					<div id="footer">
+						<section class="container">
+							<header class="major">
+								<h2>Connect with us</h2>
+							</header>
+							<ul class="icons">
+								<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
+								<li class="active"><a href="https://www.instagram.com/QuadSquadOSU" class="fa fa-instagram"><span>Instagram</span></a></li>
+							</ul>
+							<hr />
+						</section>
+					</div>
+	</body>
+</html>
