--- a/index_old1.html
+++ b/index_old1.html
@@ -34,7 +34,7 @@
 								<li><a href="services.html">Services</a></li>
 								<li><a href="mystory.html">My Story</a></li>
 								<li><a href="faq.html">FAQ</a></li>
-								<li><a href="https://quadsquadosu.wufoo.com/forms/z1a6zdxz1tk2x5k/">Contact</a></li>
+								<li><a href="contact.html">Contact</a></li>
 								<li><a href="pay.html">Pay</a></li>
 							</ul>
 						</nav>
@@ -45,7 +45,7 @@
 			<!-- Banner -->
 				<div id="banner">
 					<section class="container">
-                        <img src="images/quadsquadsmalllogo.jpg" alt="The QuadSquad">
+                        <h2>The QuadSquad</h2>
                         <p><br>The best dorm cleaning service in the great state of Ohio</p>
 					</section>
 				</div>
@@ -66,9 +66,9 @@
 						<div class="6u">
 							<header class="major">
 								<h3>We Know You're On A Budget</h3>
-								<span class="byline">Our back to school packages will save you up to <strong>20%</strong> on your cleanings! </span>
+								<span class="byline">With our low cost cleaning solutions, you can spend less time straigtening up and more time turning up</span>
 							</header>
-							<a href="services.html#packages" class="button alt">See the Specials</a>
+							<a href="services.html" class="button alt">How Much, you ask?</a>
 						</div>
 					</div>
 				</section>
@@ -89,13 +89,68 @@
 			<div class="wrapper style4">
 				<section class="container">
 					<header class="major">
-						<h2>Our Services to You</h2>
-						<br>
-						<p>We provide an array of services to help you clean easy. We have enough services to make you never have to worry about being tidy.</p>
-						<br><br>
-						<a href="services.html" class="button alt">Learn What We Do</a>
+						<h2>My Service to You</h2>
+						<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</span>
 					</header>
-
+					<div class="row flush">
+						<div class="4u">
+							<ul class="special-icons">
+								<li>
+									<span class="fa fa-leaf"></span>
+									<h3>Nulla luctus eleifend</h3>
+									<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
+								</li>
+								<li>
+									<span class="fa fa-leaf"></span>
+									<h3>Etiam posuere augue</h3>
+									<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
+								</li>
+								<li>
+									<span class="fa fa-leaf"></span>
+									<h3>Fusce ultrices fringilla</h3>
+									<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
+								</li>
+							</ul>
+						</div>
+						<div class="4u">
+							<ul class="special-icons">
+								<li>
+									<span class="fa fa-leaf"></span>
+									<h3>Nulla luctus eleifend</h3>
+									<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
+								</li>
+								<li>
+									<span class="fa fa-leaf"></span>
+									<h3>Etiam posuere augue</h3>
+									<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
+								</li>
+								<li>
+									<span class="fa fa-leaf"></span>
+									<h3>Fusce ultrices fringilla</h3>
+									<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
+								</li>
+							</ul>
+						</div>
+						<div class="4u">
+							<ul class="special-icons">
+								<li>
+									<span class="fa-leaf fa"></span>
+									<h3>Nulla luctus eleifend</h3>
+									<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
+								</li>
+								<li>
+									<span class="fa fa-leaf"></span>
+									<h3>Etiam posuere augue</h3>
+									<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
+								</li>
+								<li>
+									<span class="fa fa-leaf"></span>
+									<h3>Fusce ultrices fringilla</h3>
+									<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</section>
 			</div>
 
@@ -106,7 +161,7 @@
 						<h2>The Squad</h2>
 					</header>
 						<div class="u3" id="JustinIntro">
-							<a href="mystory.html" class="image"><img src="images/theCafs.jpg" alt="" width="235" height="230" class="mugshot"></a>
+							<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
 							<h3>Justin Cafiero</h3>
 							<p>Founder of QuadSquad</p>
 						</div>
@@ -121,7 +176,7 @@
 				</header>
 				<ul class="icons">
 					<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
-					<li class="active"><a href="https://www.instagram.com/QuadSquadOSU" class="fa fa-instagram"><span>Instagram</span></a></li>
+					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
 				</ul>
 				<hr />
 			</section>
