--- a/mystory.html
+++ b/mystory.html
@@ -36,7 +36,7 @@
 									<li><a href="services.html">Services</a></li>
 									<li><a href="mystory.html">My Story</a></li>
 									<li><a href="faq.html">FAQ</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="https://quadsquadosu.wufoo.com/forms/z1a6zdxz1tk2x5k/">Contact</a></li>
 									<li><a href="pay.html">Pay</a></li>
 								</ul>
 							</nav>
@@ -45,13 +45,12 @@
 			</div>
 
 		<!-- Main -->
-			<div id="main" class="wrapper style4">
+			<div id="main" class="wrapper style6">
 				<div class="container">
-					<div class="row">
 
 
 						<!-- Content -->
-						<div id="content" class="8u skel-cell-important">
+						<div id="content" class="container">
 							<section>
 
 								<header class="major">
@@ -66,7 +65,6 @@
 
                             </section>
 						</div>
-					</div>
 				</div>
 			</div>
 
@@ -77,25 +75,25 @@
 							<h2>The Squad</h2>
 						</header>
 							<div class="u3" id="JustinIntro">
-								<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
+								<a href="mystory.html" class="image"><img src="images/theCafs.jpg" alt="" width="235" height="230" class="mugshot"></a>
 								<h3>Justin Cafiero</h3>
 								<p>Founder of QuadSquad</p>
 							</div>
 					</section>
 				</div>
 
-		<!-- Footer -->
-			<div id="footer">
-				<section class="container">
-					<header class="major">
-						<h2>Connect with us</h2>
-					</header>
-					<ul class="icons">
-						<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
-						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					</ul>
-					<hr />
-				</section>
-			</div>
-		</body>
-	</html>
+				<!-- Footer -->
+					<div id="footer">
+						<section class="container">
+							<header class="major">
+								<h2>Connect with us</h2>
+							</header>
+							<ul class="icons">
+								<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
+								<li class="active"><a href="https://www.instagram.com/QuadSquadOSU" class="fa fa-instagram"><span>Instagram</span></a></li>
+							</ul>
+							<hr />
+						</section>
+					</div>
+				</body>
+			</html>
