--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
 									<li><a href="services.html">Services</a></li>
 									<li><a href="mystory.html">My Story</a></li>
 									<li><a href="faq.html">FAQ</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="https://quadsquadosu.wufoo.com/forms/z1a6zdxz1tk2x5k/">Contact</a></li>
 									<li><a href="pay.html">Pay</a></li>
 								</ul>
 							</nav>
@@ -46,41 +46,70 @@
 			</div>
 
 		<!-- Main -->
-			<div id="main" class="wrapper style4">
+			<div id="main" class="wrapper style6">
 				<div class="container">
 					<div class="row">
 
 						<!-- Content -->
-						<div id="content" class="8u skel-cell-important">
+						<div id="content" class="container">
 							<section>
 								<header class="major">
-									<h2>Services</h2>
+									<center>
+										<h2>Single Appointments</h2>
+									</center>
 									<!-- <span class="byline">Take your pick</span>  -->
 								</header>
                                 <p>The QuadSquad provides four packages of cleaning services.</p>
 
-<p> The first option is the Monthly-Single Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $16.99 for one roommate.</p>
-                                <p>The second option is the Monthly-Double Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $30 ($15 per roommate).</p>
-                                <p>The third option is the Monthly-Triple Clean Dorm option: a regularly scheduled cleaning appointment provided each month on the day of your choice for a total of $45 ($15 per roommate). </p>
-                                <p>The fourth option is the Emergency-Clean Dorm option: a same-day scheduled cleaning appointment provided on the day of scheduling for a total of $20 per roommate.</p>
-                                <p>All of the above Clean Dorm options provide these services: </p>
-    							<ul>
-                                    <li>Vacuuming </li>
-                                    <li>Kitchenware cleaning </li>
-                                    <li>Desk Cleaning and Polishing </li>
-                                    <li>Garbage removal and bag replacement </li>
-                                    <li>Clothes Organization </li>
-                                    <li>Temperature adjustment </li>
-                                    <li>Window cleaning </li>
-                                    <li>Wire Organization </li>
-                                    <li>Smell Control </li>
-                                </ul>
+								<p><strong>Single Clean-Dorm option:</strong> One room clean provided for a single OR one roommate in a double/triple for a total of $16.99 for one roommate.</p>
+                                <p><strong>Double Clean-Dorm option:</strong> One room clean provided for a double OR two roommates in a triple for a total of $30 ($15 per roommate).</p>
+                                <p><strong>Triple Clean-Dorm option:</strong> One room clean provided for an entire triple (3 total roommates) for a total of $45 ($15 per roommate). </p>
+                                <p><strong>Emergency Clean-Dorm option:</strong> a same-day scheduled cleaning appointment provided on the day of scheduling for a total of $20 per roommate.</p>
+                                <br>
+
 							</section>
 						</div>
+							<div id="packages" class="container">
+								<section>
+									<header class="major">
+										<center>
+											<h2><a name="packages">Fall Packages</a></h2>
+										</center>
+										<!-- <span class="byline">Take your pick</span>  -->
+									</header>
+									<p><strong>Fall Semester Monthly Package:</strong> 4 scheduled cleans provided every 4 weeks from the date selected for the remainder of the semester.</p>
+									<p>Singles are only $60, doubles are only $100, and triples are only $170</p>
+									<p><strong>Fall Semester Bi-Weekly Package:</strong> 8 scheduled cleans provided every other week for 16 weeks starting on the date selected.</p>
+									<p>Singles are only $120, doubles are only $200, and triples are only $340</p>
+								</section>
+							</div>
+							<div id="services" class="container">
+								<section>
+									<header class="major">
+										<center>
+											<br><br>
+											<h4>All of the appointments and packages include the following services: </h4>
+										</center>
+									</header>
+										<center>
+											<ul>
+												<li>Vacuuming </li>
+												<li>Kitchenware cleaning </li>
+												<li>Desk Cleaning and Polishing </li>
+												<li>Garbage removal and bag replacement </li>
+												<li>Clothes Organization </li>
+												<li>Temperature adjustment </li>
+												<li>Window cleaning </li>
+												<li>Wire Organization </li>
+												<li>Smell Control </li>
+											</ul>
+										</center>
 
+								</section>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
 
 			<!-- Team -->
 				<div class="wrapper style5">
@@ -89,25 +118,25 @@
 							<h2>The Squad</h2>
 						</header>
 							<div class="u3" id="JustinIntro">
-								<a href="#" class="image"><img src="images/ugly.jpg" alt="" width="235" height="230" class="mugshot"></a>
+								<a href="mystory.html" class="image"><img src="images/theCafs.jpg" alt="" width="235" height="230" class="mugshot"></a>
 								<h3>Justin Cafiero</h3>
 								<p>Founder of QuadSquad</p>
 							</div>
 					</section>
 				</div>
 
-		<!-- Footer -->
-			<div id="footer">
-				<section class="container">
-					<header class="major">
-						<h2>Connect with us</h2>
-					</header>
-					<ul class="icons">
-						<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
-						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					</ul>
-					<hr />
-				</section>
-			</div>
-		</body>
-	</html>
+				<!-- Footer -->
+					<div id="footer">
+						<section class="container">
+							<header class="major">
+								<h2>Connect with us</h2>
+							</header>
+							<ul class="icons">
+								<li class="active"><a href="https://www.facebook.com/QuadSquadOSU" class="fa fa-facebook"><span>Facebook</span></a></li>
+								<li class="active"><a href="https://www.instagram.com/QuadSquadOSU" class="fa fa-instagram"><span>Instagram</span></a></li>
+							</ul>
+							<hr />
+						</section>
+					</div>
+				</body>
+			</html>
