Fixed template attribution.

--- a/index.html
+++ b/index.html
@@ -126,5 +126,9 @@
 				<hr />
 			</section>
 		</div>
+
+		<div id="copyright">
+			Design: <a href="http://templated.co">TEMPLATED</a>
+		</div>
 	</body>
 </html>
